--- a/index.html
+++ b/index.html
@@ -15,14 +15,9 @@
 
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <p>
-                    Generate a Password
-                </p>
-            </div>
-        </div>
-
+            <div class="header" id="myHeader">
+                    <h2>Password Generator</h2>
+                  </div>
         <div class="row">
             <div class="col-lg-10 col-sm-12">
                 <label for="inputPassword5">Password</label>
