added onclick event to copy generated password to clipboard and added function and alert for user.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <button onclick="generatePassword ()" type="button" class="generatePassword btn btn-primary btn-lg")>Generate Password</button>
             </div>
             <div class="col-md-5 col-sm-7">
-                <button type="button" class="copyPassword btn btn-primary btn-lg">Copy to Clipboard</button>
+                <button onclick= "copyStringToClipboard()" type="button" class="copyPassword btn btn-primary btn-lg">Copy to Clipboard</button>
             </div>
         </div>
     </div>
