adding checkboxes and functions to checkboxes.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,16 @@
             <h2>Password Generator</h2>
         </div>
         <div class="row">
+            <div class= "col-md-6">
+                    <input type= Number placeholder = "Pick a number between 8 and 128" min="8" max="128" id="userPwInput"><br>
+                    <input type="checkbox" id="uppercase" > Uppercase <br>
+                    <input type="checkbox" id="lowercase" > Lowercase <br>
+                    <input type="checkbox" id="number" > Number <br>
+                    <input type="checkbox" id="specialCharacter" > Special Character <br>
+            </div>
+
+        </div>
+        <div class="row">
             <div class="col-lg-10 col-sm-12">
                 <label for="inputPassword5">Password</label>
                 <input type="text" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
