--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <h2>Password Generator</h2>
         </div>
         <div class="row">
-            <div class= "col-md-6">
+            <div class= "checkbox-text col-md-6">
                     <input type= Number placeholder = "Pick a number between 8 and 128" min="8" max="128" id="userPwInput"><br>
                     <input type="checkbox" id="uppercase" > Uppercase <br>
                     <input type="checkbox" id="lowercase" > Lowercase <br>
@@ -34,7 +34,7 @@
         </div>
         <div class="row">
             <div class="col-lg-10 col-sm-12">
-                <label for="inputPassword5">Password</label>
+                <label for="inputPassword5"></label>
                 <input type="text" id="inputPassword5" class="form-control" aria-describedby="passwordHelpBlock">
                 <small id="passwordHelpBlock" class="form-text text-muted"></small>
             </div>
